--- a/pyfred/unittests/domainbrowser/dbdata/nsset.yaml
+++ b/pyfred/unittests/domainbrowser/dbdata/nsset.yaml
@@ -12,26 +12,7 @@
       data: {handle: 'NSSET:FOO', type_id: 2}
       response:
       - []
-18b5172200b6fc1bd581d6167145f810:
-  query: |-
-    SELECT
-                    object_registry.id,
-                    object_registry.name,
-                    CASE WHEN contact.organization IS NOT NULL AND LENGTH(contact.organization) > 0 THEN
-                        contact.organization ELSE contact.name
-                    END
-                FROM nsset_contact_map
-                LEFT JOIN object_registry ON object_registry.id = nsset_contact_map.contactid
-                LEFT JOIN contact ON contact.id = nsset_contact_map.contactid
-                WHERE nssetid = %(obj_id)d
-                ORDER BY object_registry.name
-  values:
-    0a6bfe676a9069c75de42ffa085918de:
-      data: {obj_id: 8}
-      response:
-      - - [4, ANNA, !!python/str "Anna Proch\xE1zkov\xE1"]
-        - [6, TESTER, !!python/str "Tom\xE1\u0161 Tester"]
-69e58e3f3e4f4606c6308299baa821f6:
+3eb5274d6c5c9539f27ca901b41b18e4:
   query: |-
     SELECT
                         object_registry.id,
@@ -41,10 +22,10 @@
                         registrar.name AS registrar_name,
                         get_state_descriptions(nsset_contact_map.nssetid, %(lang)s) AS states
                     FROM object_registry
+                        JOIN object ON object.id = object_registry.id
+                        JOIN registrar ON registrar.id = object.clid
+                        JOIN nsset_contact_map ON nsset_contact_map.nssetid = object_registry.id
                         LEFT JOIN domains_by_nsset_view domains ON domains.nsset = object_registry.id
-                        LEFT JOIN nsset_contact_map ON nsset_contact_map.nssetid = object_registry.id
-                        LEFT JOIN object ON object.id = object_registry.id
-                        LEFT JOIN registrar ON registrar.id = object.clid
                     WHERE object_registry.type = %(objtype)d
                         AND nsset_contact_map.contactid = %(contact_id)d
                     LIMIT %(limit)d OFFSET %(offset)d
@@ -87,7 +68,7 @@
       data: null
       response:
       - - [64]
-e3f3b0ee1b42c8507d86f8b6c9f2b5d6:
+9bff3172b1a7aeafbf282c637ff61cec:
   query: |-
     SELECT
                     oreg.id AS id,
@@ -115,11 +96,11 @@ e3f3b0ee1b42c8507d86f8b6c9f2b5d6:
                     current.name AS registrar_name
 
                 FROM object_registry oreg
-                    LEFT JOIN object obj ON obj.id = oreg.id
-                    LEFT JOIN nsset ON nsset.id = oreg.id
+                    JOIN object obj ON obj.id = oreg.id
+                    JOIN nsset ON nsset.id = oreg.id
 
-                    LEFT JOIN registrar creator ON creator.id = oreg.crid
-                    LEFT JOIN registrar current ON current.id = obj.clid
+                    JOIN registrar creator ON creator.id = oreg.crid
+                    JOIN registrar current ON current.id = obj.clid
                     LEFT JOIN registrar updator ON updator.id = obj.upid
 
                 WHERE oreg.id = %(object_id)d
@@ -134,6 +115,25 @@ e3f3b0ee1b42c8507d86f8b6c9f2b5d6:
       - - [8, NSSID01, N0000000008-CZ, '2013-06-14 13:31:51.700438', null, null, TrgdMfXu,
           3, t#20#linked#Has relation to other records in the registry, null, null,
           null, 1, REG-FRED_A, Company A l.t.d, 1, REG-FRED_A, Company A l.t.d]
+e369d233e8d8b7f59672dc394f58c246:
+  query: |-
+    SELECT
+                    object_registry.id,
+                    object_registry.name,
+                    CASE WHEN contact.organization IS NOT NULL AND LENGTH(contact.organization) > 0 THEN
+                        contact.organization ELSE contact.name
+                    END
+                FROM nsset_contact_map
+                JOIN object_registry ON object_registry.id = nsset_contact_map.contactid
+                JOIN contact ON contact.id = nsset_contact_map.contactid
+                WHERE nssetid = %(obj_id)d
+                ORDER BY object_registry.name
+  values:
+    0a6bfe676a9069c75de42ffa085918de:
+      data: {obj_id: 8}
+      response:
+      - - [4, ANNA, !!python/str "Anna Proch\xE1zkov\xE1"]
+        - [6, TESTER, !!python/str "Tom\xE1\u0161 Tester"]
 f0e311cbd7a0564f1d6e7c8f55da2eb5:
   query: |-
     SELECT oreg.id
