--- a/pyfred/unittests/domainbrowser/refdata/nsset_detail_nssid01_en.yaml
+++ b/pyfred/unittests/domainbrowser/refdata/nsset_detail_nssid01_en.yaml
@@ -4,7 +4,7 @@ detail: !!python/object:pyfred.idlstubs.Registry.DomainBrowser.NSSetDetail
     id: !!python/long '4', name: !!python/str "Anna Proch\xE1zkov\xE1"}
   - !!python/object:pyfred.idlstubs.Registry.DomainBrowser.RegistryReference {handle: TESTER,
     id: !!python/long '6', name: !!python/str "Tom\xE1\u0161 Tester"}
-  auth_info: '********'
+  auth_info: TrgdMfXu
   create_date: '2013-06-14 13:31:51.700438'
   create_registrar: !!python/object:pyfred.idlstubs.Registry.DomainBrowser.RegistryReference {
     handle: REG-FRED_A, id: 1, name: Company A l.t.d}
@@ -25,5 +25,5 @@ detail: !!python/object:pyfred.idlstubs.Registry.DomainBrowser.NSSetDetail
   update_date: ''
   update_registrar: !!python/object:pyfred.idlstubs.Registry.DomainBrowser.RegistryReference {
     handle: '', id: 0, name: ''}
-owner: !!python/object:omniORB.EnumItem {_n: PUBLIC_DATA, _parent_id: 'IDL:Registry/DomainBrowser/DataAccessLevel:1.0',
-  _v: 0}
+owner: !!python/object:omniORB.EnumItem {_n: PRIVATE_DATA, _parent_id: 'IDL:Registry/DomainBrowser/DataAccessLevel:1.0',
+  _v: 1}
