--- a/pyfred/unittests/domainbrowser/refdata/nsset_list_en_0.yaml
+++ b/pyfred/unittests/domainbrowser/refdata/nsset_list_en_0.yaml
@@ -1,13 +1,13 @@
 exceeded: false
 table:
 - ['8', NSSID01, '31', REG-FRED_A, Company A l.t.d, '20', Has relation to other records
-    in the registry]
-- ['9', NSSID02, '0', REG-FRED_A, Company A l.t.d, '64', '']
-- ['10', NSSID03, '0', REG-FRED_A, Company A l.t.d, '64', '']
-- ['11', NSSID04, '0', REG-FRED_A, Company A l.t.d, '64', '']
-- ['12', NSSID05, '0', REG-FRED_A, Company A l.t.d, '64', '']
-- ['13', NSSID06, '0', REG-FRED_A, Company A l.t.d, '64', '']
-- ['14', NSSID07, '0', REG-FRED_A, Company A l.t.d, '64', '']
-- ['15', NSSID08, '0', REG-FRED_A, Company A l.t.d, '64', '']
-- ['16', NSSID09, '0', REG-FRED_A, Company A l.t.d, '64', '']
-- ['17', NSSID10, '0', REG-FRED_A, Company A l.t.d, '64', '']
+    in the registry, f]
+- ['9', NSSID02, '0', REG-FRED_A, Company A l.t.d, '64', '', f]
+- ['10', NSSID03, '0', REG-FRED_A, Company A l.t.d, '64', '', f]
+- ['11', NSSID04, '0', REG-FRED_A, Company A l.t.d, '64', '', f]
+- ['12', NSSID05, '0', REG-FRED_A, Company A l.t.d, '64', '', f]
+- ['13', NSSID06, '0', REG-FRED_A, Company A l.t.d, '64', '', f]
+- ['14', NSSID07, '0', REG-FRED_A, Company A l.t.d, '64', '', f]
+- ['15', NSSID08, '0', REG-FRED_A, Company A l.t.d, '64', '', f]
+- ['16', NSSID09, '0', REG-FRED_A, Company A l.t.d, '64', '', f]
+- ['17', NSSID10, '0', REG-FRED_A, Company A l.t.d, '64', '', f]
