Ticket #9081 - Update db dump for registtry objects with serverBlocked.
Changes at dynamic generated data (datetimes, passwords)
and five handles FRANTA, NSSID05, KEYID05, nic05.cz

--- a/pyfred/unittests/domainbrowser/dbdata/contact.yaml
+++ b/pyfred/unittests/domainbrowser/dbdata/contact.yaml
@@ -128,7 +128,7 @@ a91c5dcb1da3942ff5508b7cc24e0136:
     0e3010a672457cf9ae728e8c9fa27cfc:
       data: {object_id: !!python/long '6'}
       response:
-      - - [sMtuUAze]
+      - - [IgcmYDXW]
       - - [password]
 bd5d09a6814124b4154f61902766a0dd:
   query: |-
@@ -319,14 +319,14 @@ f88ac281b0e5a8afe2febb920b55add0:
       data: {handle: BOB, id: &id006 !!python/long '7', lang: EN, name: '', object_id: *id006,
         type_id: 1}
       response:
-      - - - [7, BOB, C0000000007-CZ, '2013-06-14 13:31:51.297114', null, null, PNhmLTYQ,
+      - - - [7, BOB, C0000000007-CZ, '2013-07-19 13:28:59.556519', null, null, EimHDofa,
             !!python/str "Bobe\u0161 \u0160ufl\xEDk", null, !!python/str "B\xE1\u0148\
               sk\xE1 35", null, null, null, '18200', !!python/str "Doma\u017Elice",
             CZ, '+420.726123461', '+420.726123450', bobes.suflik@nic.czcz, bob+notify@nic.czcz,
             '84956252', OP, CZ1234567895, true, true, true, true, true, false, false,
             false, false, t#20#linked#Has relation to other records in the registry,
             1, REG-FRED_A, Company A l.t.d]
-        - - [7, BOB, C0000000007-CZ, '2013-06-14 13:31:51.297114', null, null, PNhmLTYQ,
+        - - [7, BOB, C0000000007-CZ, '2013-07-19 13:28:59.556519', null, null, EimHDofa,
             !!python/str "Bobe\u0161 \u0160ufl\xEDk", null, !!python/str "B\xE1\u0148\
               sk\xE1 35", null, null, null, '18200', !!python/str "Doma\u017Elice",
             CZ, '+420.726123461', '+420.726123450', bobes.suflik@nic.czcz, bob+notify@nic.czcz,
@@ -337,7 +337,7 @@ f88ac281b0e5a8afe2febb920b55add0:
       data: {handle: CIHAK, id: &id007 !!python/long '2', lang: EN, name: '', object_id: *id007,
         type_id: 1}
       response:
-      - - [2, CIHAK, C0000000002-CZ, '2013-06-14 13:31:49.804755', null, null, ANuUSKZg,
+      - - [2, CIHAK, C0000000002-CZ, '2013-07-19 13:28:58.065064', null, null, niKmNQOr,
           !!python/str "\u0158eho\u0159 \u010Cih\xE1k", !!python/str "Firma \u010C\
             ih\xE1k a spol.", !!python/str "P\u0159\xEDpoto\u010Dn\xED 16/3", null,
           null, null, '12601', !!python/str "\u0158\xED\u010Dany u Prahy", CZ, '+420.726123456',
