--- a/pyfred/unittests/domainbrowser/dbdata/nsset.yaml
+++ b/pyfred/unittests/domainbrowser/dbdata/nsset.yaml
@@ -28,6 +28,7 @@
         keys: [8, 9, 10, 11, 12, 13, 14, 15, 16, 17]
       response:
       - - [8, 16]
+        - [12, 7]
 877c282278511617a249a217f2691c10:
   query: |-
     SELECT
@@ -125,7 +126,7 @@
       data: {handle: NSSID01, id: &id001 !!python/long '8', lang: EN, name: '', object_id: *id001,
         type_id: 2}
       response:
-      - - [8, NSSID01, N0000000008-CZ, '2013-06-14 13:31:51.700438', null, null, TrgdMfXu,
+      - - [8, NSSID01, N0000000008-CZ, '2013-07-19 13:28:59.965814', null, null, dpvvgRnq,
           3, t#20#linked#Has relation to other records in the registry, null, null,
           null, 1, REG-FRED_A, Company A l.t.d, 1, REG-FRED_A, Company A l.t.d]
 c83c383266533e515a379cace781f53f:
