--- a/pyfred/unittests/domainbrowser/refdata/keyset_detail_keyid01_en.yaml
+++ b/pyfred/unittests/domainbrowser/refdata/keyset_detail_keyid01_en.yaml
@@ -4,8 +4,8 @@ detail: !!python/object:pyfred.idlstubs.Registry.DomainBrowser.KeysetDetail
     id: !!python/long '4', name: !!python/str "Anna Proch\xE1zkov\xE1"}
   - !!python/object:pyfred.idlstubs.Registry.DomainBrowser.RegistryReference {handle: TESTER,
     id: !!python/long '6', name: !!python/str "Tom\xE1\u0161 Tester"}
-  auth_info: oDmfgnip
-  create_date: '2013-06-14 13:31:54.616493'
+  auth_info: WYdFuglW
+  create_date: '2013-07-19 13:29:02.855337'
   create_registrar: !!python/object:pyfred.idlstubs.Registry.DomainBrowser.RegistryReference {
     handle: REG-FRED_A, id: 1, name: Company A l.t.d}
   dnskeys:
